--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Isomorphic javascript form and data validation library.",
   "main": "index.js",
   "scripts": {
+    "commit": "git-cz",
     "test": "jest"
   },
   "repository": {
@@ -32,5 +33,11 @@
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "validate-commit-msg": "^2.14.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
+
 }
