--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Isomorphic javascript form and data validation library.",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint --fix src/",
     "commit": "git-cz",
     "test": "jest"
   },
@@ -30,8 +31,12 @@
   },
   "homepage": "https://github.com/itihon/v-for-validation#readme",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "validate-commit-msg": "^2.14.0"
   },
   "config": {
@@ -39,5 +44,4 @@
       "path": "cz-conventional-changelog"
     }
   }
-
 }
