--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "v-for-validation",
   "version": "1.0.0",
   "description": "Isomorphic javascript form and data validation library.",
-  "main": "index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "scripts": {
     "format:check": "prettier --check \"{src,__tests__}/**/*.{js,mjs}\"",
     "format:write": "prettier --write \"{src,__tests__}/**/*.{js,mjs}\"",
     "lint": "eslint --fix .",
+    "build:esm": "rollup src/index.js --file dist/index.esm.js --format esm",
+    "build:cjs": "rollup src/index.js --file dist/index.cjs.js --format cjs",
+    "build": "npm run build:esm & npm run build:cjs",
     "commit": "git-cz",
     "test": "jest"
   },
@@ -42,6 +46,7 @@
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "prettier": "3.3.2",
+    "rollup": "^4.18.0",
     "validate-commit-msg": "^2.14.0"
   },
   "config": {
