--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "check",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Isomorphic javascript form and data validation library.",
+  "homepage": "https://github.com/itihon/check",
   "bin": {
-    "check": "./bin/index.js"
+    "check": "bin/index.js"
   },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "browser": "dist/index.esm.js",
+  "files": [
+    "dist",
+    "bin"
+  ],
   "scripts": {
     "format:check": "prettier --check \"{src,__tests__}/**/*.{js,mjs}\"",
     "format:write": "prettier --write \"{src,__tests__}/**/*.{js,mjs}\"",
@@ -39,7 +44,6 @@
   "bugs": {
     "url": "https://github.com/itihon/check/issues"
   },
-  "homepage": "https://github.com/itihon/check#readme",
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "commitizen": "^4.3.0",
