--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dist",
     "bin"
   ],
+  "type": "module",
   "scripts": {
     "format:check": "prettier --check \"{src,__tests__}/**/*.{js,mjs}\"",
     "format:write": "prettier --write \"{src,__tests__}/**/*.{js,mjs}\"",
@@ -21,7 +22,8 @@
     "build:cjs": "rollup src/index.js --file dist/index.cjs.js --format cjs",
     "build": "npm run build:esm & npm run build:cjs",
     "commit": "git-cz",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
+    "@jest/globals": "^29.7.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
@@ -55,7 +58,11 @@
     "jest": "^29.7.0",
     "prettier": "3.3.2",
     "rollup": "^4.18.0",
+    "rollup-jest": "^3.1.0",
     "validate-commit-msg": "^2.14.0"
+  },
+  "overrides": {
+    "rollup": "$rollup"
   },
   "config": {
     "commitizen": {
