--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.7",
     "prettier": "3.3.2",
     "rollup": "^4.18.0",
     "rollup-jest": "^3.1.0",
@@ -68,5 +69,11 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "{src,__tests__}/**/*.{js,mjs}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
