--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
   "bin": {
     "isomorphic-validation": "bin/index.js"
   },
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "browser": "dist/index.esm.js",
+  "main": "dist/cjs/index.cjs.js",
+  "module": "dist/esm/index.esm.js",
+  "browser": "dist/esm/index.esm.js",
   "files": [
     "dist",
-    "bin"
+    "bin",
+    "intellisense"
   ],
   "scripts": {
     "postinstall": "echo 'installing git hooks...' && git config core.hooksPath ./.git-hooks",
     "format:check": "prettier --check \"{src,__tests__}/**/*.{js,mjs}\"",
     "format:write": "prettier --write \"{src,__tests__}/**/*.{js,mjs}\"",
     "lint": "eslint --fix .",
-    "build:esm": "rollup src/index.js --file dist/index.esm.js --format esm",
-    "build:cjs": "rollup src/index.js --file dist/index.cjs.js --format cjs",
+    "build:esm": "rollup src/index.js --file dist/esm/index.esm.js --format esm",
+    "build:cjs": "rollup src/index.js --file dist/cjs/index.cjs.js --format cjs",
     "build": "npm run build:esm && npm run build:cjs",
     "commit": "git-cz",
     "test:server": "jest --testPathIgnorePatterns=\"__tests__.*client\\.test\\.js\" --env=\"node\"",
