chore(package.json): install husky, configure hooks

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   ],
   "types": "types/index.d.ts",
   "scripts": {
-    "postinstall": "echo 'installing git hooks...' && git config core.hooksPath ./.git-hooks",
     "prepublishOnly": "npm run build",
     "format:check": "prettier --check \"{src,__tests__}/**/*.{js,mjs}\"",
     "format:write": "prettier --write \"{src,__tests__}/**/*.{js,mjs}\"",
@@ -28,7 +27,8 @@
     "test:server": "jest --testPathIgnorePatterns=\"__tests__.*client\\.test\\.js\" --env=\"node\"",
     "test:client": "jest --testPathPattern=\"__tests__.*client\\.test\\.js\" --env=\"jsdom\"",
     "test:watch": "jest --watch",
-    "test": "npm run test:server && npm run test:client"
+    "test": "npm run test:server && npm run test:client",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -60,6 +60,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "husky": "^9.1.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.7",
