--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "isomorphic-validation",
   "version": "0.2.3",
   "description": "Isomorphic javascript form and data validation library.",
-  "homepage": "https://github.com/itihon/isomorphic-validation",
+  "homepage": "https://itihon.github.io/isomorphic-validation-docs",
   "bin": {
     "isomorphic-validation": "bin/index.js"
   },
