--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
       "types": "./types/helpers.d.ts",
       "import": "./dist/esm/index.helpers.js",
       "require": "./dist/cjs/index.helpers.js"
+    },
+    "./ui": {
+      "types": "./types/ui.d.ts",
+      "import": "./dist/esm/index.ui.js",
+      "require": "./dist/cjs/index.ui.js"
     }
   },
   "types": "types/index.d.ts",
@@ -34,9 +39,11 @@
     "lint": "eslint --fix .",
     "build:esm": "rollup src/index.js --file dist/esm/index.js --format esm",
     "build:cjs": "rollup src/index.js --file dist/cjs/index.js --format cjs",
+    "build:esm:ui": "rollup src/index.ui.js --dir dist/esm/ --format esm --preserveModules",
+    "build:cjs:ui": "rollup src/index.ui.js --dir dist/cjs/ --format cjs --preserveModules",
     "build:esm:helpers": "rollup src/index.helpers.js --dir dist/esm/ --format esm --preserveModules",
     "build:cjs:helpers": "rollup src/index.helpers.js --dir dist/cjs/ --format cjs --preserveModules",
-    "build": "npm run build:esm && npm run build:cjs && npm run build:esm:helpers && npm run build:cjs:helpers",
+    "build": "npm run build:esm && npm run build:cjs && npm run build:esm:ui && npm run build:cjs:ui && npm run build:esm:helpers && npm run build:cjs:helpers",
     "commit": "git-cz",
     "test:server": "jest --testPathIgnorePatterns=\"__tests__.*client\\.test\\.js\" --env=\"node\"",
     "test:client": "jest --testPathPattern=\"__tests__.*client\\.test\\.js\" --env=\"jsdom\"",
