chore(package.json): remove unnecessary build cjs ui script

--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "build:esm": "rollup src/index.js --file dist/esm/index.js --format esm",
     "build:cjs": "rollup src/index.js --file dist/cjs/index.js --format cjs",
     "build:esm:ui": "rollup src/index.ui.js --dir dist/esm/ --format esm --preserveModules",
-    "build:cjs:ui": "rollup src/index.ui.js --dir dist/cjs/ --format cjs --preserveModules",
-    "build": "npm run build:esm && npm run build:cjs && npm run build:esm:ui && npm run build:cjs:ui",
+    "build": "npm run build:esm && npm run build:cjs && npm run build:esm:ui",
     "commit": "git-cz",
     "test:server": "jest --testPathIgnorePatterns=\"__tests__.*client\\.test\\.js\" --env=\"node\"",
     "test:client": "jest --testPathPattern=\"__tests__.*client\\.test\\.js\" --env=\"jsdom\"",
