chore(package.json): add build dummy ui script and rollup plugin-alias

--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "build:esm": "rollup src/index.js --file dist/esm/index.js --format esm",
     "build:cjs": "rollup src/index.js --file dist/cjs/index.js --format cjs",
     "build:esm:ui": "rollup src/index.ui.js --dir dist/esm/ --format esm --preserveModules",
-    "build": "npm run build:esm && npm run build:cjs && npm run build:esm:ui",
+    "build:esm:ui:dummy": "rollup --config dummy.rollup.config.js src/index.ui.js --file dist/esm/dummy.ui.js --format esm",
+    "build:cjs:ui:dummy": "rollup --config dummy.rollup.config.js src/index.ui.js --file dist/cjs/dummy.ui.js --format cjs",
+    "build:dummy:ui": "npm run build:esm:ui:dummy && npm run build:cjs:ui:dummy",
+    "build": "npm run build:esm && npm run build:cjs && npm run build:esm:ui && npm run build:dummy:ui",
     "commit": "git-cz",
     "test:server": "jest --testPathIgnorePatterns=\"__tests__.*client\\.test\\.js\" --env=\"node\"",
     "test:client": "jest --testPathPattern=\"__tests__.*client\\.test\\.js\" --env=\"jsdom\"",
@@ -71,6 +74,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@jest/globals": "^29.7.0",
+    "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
